--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 dist: trusty
-addons:
-  apt:
-    packages:
-    - ninja
+before_install:
+  - sudo apt-get install -y ninja-build
 script:
   - bash -x test.sh
   - bash -x build.sh
